styles.css
* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}

button {
  height: fit-content;
  display: block;
}

body {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  font-family: Roboto, sans-serif;
  background-color: #f5f5f4;
}

img {
  height: 100%;
  width: 100%;
  object-fit: cover;
  transition: 0.2s;
}

.header {
  width: 100%;
  padding: 8px 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background: linear-gradient(to top, #44403c, #292524, #1c1917);
  color: #d6d3d1;
  font-size: 1.5rem;
  font-weight: 600;
}
.content {
  display: flex;
  flex-direction: column;
  flex: 1;
  background-color: #e7e5e4;
}
.image-container {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  flex-grow: 1;
  width: 80vw;
  padding: 2%;
  font-size: 2rem;
  font-weight: 900;
}

.image-div {
  width: 120px;
  height: 120px;
  background-color: #e7e5e4;
  border: 4px solid #78716c;
  border-radius: 12px;
}

.game-image {
  border-radius: 8px;
  opacity: 0;
}

.controls {
  display: flex;
  flex: 1;
  justify-content: center;
  align-items: center;
  width: 80vw;
  background-color: #d6d3d1;
}

.control-div {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  gap: 2vh;
  font-size: 24px;
  font-weight: 600;
}
.announcement {
  font-size: 24px;
  font-weight: 700;
  font-style: italic;
}

.game-button {
  border-radius: 24px;
  border: none;
  background: linear-gradient(to top, #44403c, #1c1917);
  color: #d6d3d1;
  transition: 0.2s;
}
.game-button-large {
  width: 20vw;
  min-width: 208px;
  padding: 4px;
  font-size: 24px;
}

.game-button-small {
  width: 15vw;
  font-size: 18px;
  padding: 4px;
}

.game-button:hover {
  scale: 1.2;
}

.footer {
  width: 100%;
  padding: 4px 0;
  margin-top: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  flex: 0;
  background-color: #737373;
  color: #d6d3d1;
}

.hidden {
  display: none;
}

